# pipower5

./: .gitignore  README.md  install.py  pyproject.toml
docs/source/: assembly.rst  basic.rst  battery.rst  compatible_sbc.rst  conf.py  fan.rst  index.rst  pipower_hat.rst  pipower_software.rst  update_firmware.rst  use_with_arduino.rst  use_with_micropython.rst  use_with_python.rst
driver/: Makefile  README.md  install.sh  pipower5_driver.c  pipower5_driver.conf  pipower5_driver.py  pipower5_driver.service
email_templates/: battery_activated.html  battery_critical_shutdown.html  battery_voltage_critical_shutdown.html  email_templates.json  low_battery.html  power_disconnected.html  power_insufficient.html  power_restored.html
examples/: read_all.py  read_individual.py  read_power_btn.py  set_shutdown_percentage.py
pipower5/: __init__.py  battery_device.py  config.json  constants.py  debounce.py  email_sender.py  lazy_caller.py  logger.py  note.py  pipower5.py  pipower5_manager.py  pipower5_service copy.py  pipower5_service.py  pipower5_system.py  shutdown_service.py  utils.py  version.py
test/: send_email.py  test_debounce.py
tools/: sf_installer.py
