[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipower5"
authors = [
  { name="SunFounder", email="service@sunfounder.com" },
]
description = "Library for PiPower 5"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = []

[project.scripts]
pipower5 = "pipower5:main"

[tool.setuptools]
packages = ["pipower5"]

[project.urls]
"Homepage" = "https://github.com/sunfounder/pipower5"
"Bug Tracker" = "https://github.com/sunfounder/pipower5/issues"

[tool.setuptools.dynamic]
version = {attr = "pipower5.version.__version__"}
